--- a/.github/workflows/waketime.yml
+++ b/.github/workflows/waketime.yml
@@ -2,16 +2,11 @@ name: "🕒 Update WakaTime Developer Stats"
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs every day at 00:00 UTC
+    - cron: '0 0 * * *' # Runs daily at 00:00 UTC
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - master
 
 jobs:
   update-readme:
-    name: Generate advanced WakaTime dashboard
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -24,9 +19,6 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: pip install requests pyyaml
-
       - name: Generate WakaTime stats
         uses: athul/waka-readme@master
         with:
@@ -36,23 +28,14 @@ jobs:
           SHOW_TIME: true
           SHOW_TOTAL: true
           SHOW_MASKED_TIME: false
-          SHOW_DAYS_OF_WEEK: true
-          SHOW_EDITORS: true
-          SHOW_LANGUAGES: true
-          SHOW_OS: true
-          SHOW_PROJECTS: true
           TIME_RANGE: last_7_days
           LANG_COUNT: 5
           COMMIT_MESSAGE: "🕒 Update WakaTime advanced dashboard"
 
-      - name: Add dynamic timestamp to README
+      - name: Add dynamic timestamp
         run: |
           CURRENT_DATE=$(date -u +"%B %d, %Y — %H:%M UTC")
-          if grep -q "{{DATE}}" README.md; then
-            sed -i "s|{{DATE}}|$CURRENT_DATE|g" README.md
-          else
-            echo -e "\n⏰ Last updated automatically on: $CURRENT_DATE" >> README.md
-          fi
+          sed -i "s|{{DATE}}|$CURRENT_DATE|g" README.md || echo "No date tag found"
 
       - name: Commit updated README
         run: |
