--- a/.github/workflows/profile-stats.yml
+++ b/.github/workflows/profile-stats.yml
@@ -16,6 +16,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          user: elvisowusu
           base: header, activity, community, repositories, metadata
           config_timezone: Africa/Accra
           plugin_activity: yes
@@ -28,3 +29,13 @@ jobs:
           plugin_followup: yes
           plugin_habits: yes
           plugin_habits_facts: yes
+          output_action: commit
+
+      - name: Push metrics to repository
+        if: always()
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "♻️ Update GitHub profile metrics"
+          file_pattern: "metrics.svg"
+          skip_fetch: false
+          skip_checkout: false
