--- a/.github/workflows/profile-stats.yml
+++ b/.github/workflows/profile-stats.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Update profile README metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
           user: elvisowusu
           base: header, activity, community, repositories, metadata
           config_timezone: Africa/Accra
